bug in dark mode fixed

--- a/style.css
+++ b/style.css
@@ -13,11 +13,6 @@
   white-space : pre;   /* preserve the original line breaks (see above)*/
 }
 
-/* Night mode */
-.night{
-  color:white;
-  background:#000000;
-}
 
 /* Info button */ 
 .info-icon:hover{
@@ -33,7 +28,7 @@
 }
 .image-content {
   position: relative;
-  width: 90%;
+  width: 100%;
   max-width: 400px;
   margin: auto;
   overflow: hidden;
@@ -46,7 +41,6 @@
   text-align: center;
   padding-left: 1em;
   padding-right: 1em;
-  width: 100%;
   top: 50%;
   left: 50%;
   opacity: 0;
@@ -66,6 +60,7 @@
 
 .content-details h3{
   color: #000;
+  background: yellow;
   font-weight: 500;
   letter-spacing: 0.15em;
   margin-bottom: 0.5em;
@@ -74,5 +69,11 @@
 
 
 .fadeIn-bottom{
-  top: 80%;
+  top: 60%;
+}
+
+/* Night mode */
+.night{
+  color:white;
+  background:#000;
 }
